# HSLynk

./: README.md  installer.nsi  pubspec.yaml
.github/workflows/: release.yml
lib/: main.dart  theme.dart
lib/screens/: about.dart  device_settings.dart  device_upgrade.dart  home.dart  settings.dart
lib/src/device/: device_manager.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: hslink_backend.dart
lib/src/utils/: crc32.dart
linux/: 99-hslink.rules  CMakeLists.txt
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
linux/runner/: my_application.cc
macos/: Podfile
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: copy_file.rs  hslink_backend.rs  mod.rs
rust/src/api/find_bl/: find_bl_macos.rs  find_bl_win.rs  mod.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/ios/: rust_lib_hslynk.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_hslynk.podspec
rust_builder/windows/: CMakeLists.txt
windows/: CMakeLists.txt  installer.nsi
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
